# n-gine

./: CMakeLists.txt  README.md  launch.vs.json
res/: .gitignore  1.tmj  2.tmj  3.tmj  4.tmj  acid_falls.tmj  big_boulder.tmj  data.pfs  entry.tmj  forest.tmj  forest.tsj  lowtown-1.tmj  lowtown-2.tmj  lowtown.tmj  lowtown.tmx  lowtown.tsx  midtown-1.tmj  midtown.tsj  mountain.tsj  ngine.world  nrpg.world  tall_forest.tmj  tall_forest.tsj
src/: CPackedFileReader.c  core.c  core.h  main.c  ngine.c  ngine.h  ngtypes.h  pfs.c  pfs_reader.c  tiled.c  types.h  utils.c  utils.h
